# mcp-server

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  auth.py  config.py  docker-compose.yml  models.py  proxy_client.py  pyproject.toml  repositories.py  server.py  services.py
docs/: azure-setup.md
src/fprime_mcp/: __init__.py  config.py  main.py  mcp_server.py
src/fprime_mcp/auth/: __init__.py  middleware.py  models.py  oidc.py  oidc_config.py  routes.py  session.py
src/fprime_mcp/cli/: __init__.py
src/fprime_mcp/tools/: __init__.py  network_search.py  registry.py  therapeutics.py
src/fprime_mcp/tools/internal/: __init__.py
tests/: test_auth.py  test_auth_notebook.ipynb  test_credentials.py  test_msgraph_credentials.py  test_network_search_tool.py  test_oidc_flow.py
